--- a/headphones/7-styles.css
+++ b/headphones/7-styles.css
@@ -20,8 +20,7 @@ html {
 /* What we do */
 #what-we-do {
   background: #fff;
-  margin: 0;
-  padding: 20px;
+  margin: 2px;
   height: 100vh;
   box-sizing: border-box;
   display: flex;
@@ -30,21 +29,20 @@ html {
   align-items: center;
 }
 
-
 .information-section {
-padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: auto;
   text-align: center;
-  /* border: 1px solid black; */
   width: 50%;
 }
 
 .information-section h2 {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: flex-start;
 }
 
 .information-text {
@@ -73,13 +71,13 @@ padding: 10px;
 }
 
 /* Service Card Animations */
-.service-card:hover{
-    opacity: 1.0;
-    border: 1px solid #ff6565;
-    background-color: #a8615f;
-    border-radius: 5px;
-    cursor: pointer;
-    scale: 1.1;
+.service-card:hover {
+  opacity: 1;
+  border: 1px solid #ff6565;
+  background-color: #a8615f;
+  border-radius: 5px;
+  cursor: pointer;
+  scale: 1.1;
 }
 
 .service-card img {
